# VisionRC

./: .gitlab-ci.yml  CMakeLists.txt  README.MD  app.cpp  app.h  camera.cpp  camera.h  cameraframe.cpp  cameraframe.h  imgui.ini  main.cpp  race.cpp  race.h  racer.cpp  racer.h  setup.sh  todo.txt
cmake/Modules/: visionrc_cpack.cmake
packaging/: Containerfile.fedora  Containerfile.ubuntu  package.sh
